# fomo

./: README.md  pyproject.toml
examples/: aws_examples.py
src/fomo/: __init__.py  cloudwatch.py  zabbix.py
src/fomo/conf/: .fomo.toml.example
